--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -188,3 +188,87 @@ curl --request GET \
 - `index.number_of_routing_shards`: 分割 `index` 的路由分片的数量；
 
 **动态设置**
+
+**mapping**
+
+**merge**
+
+ES 中 `shard` 是一个 `Lucene` 索引，`Lucene` 索引分割成 `segments`。
+- `segment` 不可变；
+- `segment` 周期性的合并来除去删除以及保持 `index` 大小；
+- `ConcurrentMergeScheduler` 控制合并线程数。
+
+**相似性**
+
+**存储**
+
+根据系统选择最佳的存储。
+
+**translog**
+
+**index 排序**
+
+```shell
+curl -X PUT "localhost:9200/my-index-000001?pretty" -H 'Content-Type: application/json' -d'
+{
+  "settings": {
+    "index": {
+      "sort.field": [ "username", "date" ], 
+      "sort.order": [ "asc", "desc" ]       
+    }
+  },
+  "mappings": {
+    "properties": {
+      "username": {
+        "type": "keyword",
+        "doc_values": true
+      },
+      "date": {
+        "type": "date"
+      }
+    }
+  }
+}
+'
+```
+
+- 先按照 `username` **升序**，然后按照 `date` **降序**。
+- 可以使连接更有效。
+
+## Mapping
+
+**创建索引附带 mapping**
+
+```shell
+curl -X PUT "localhost:9200/my-index-000001?pretty" -H 'Content-Type: application/json' -d'
+{
+  "mappings": {
+    "properties": {
+      "age":    { "type": "integer" },  
+      "email":  { "type": "keyword"  }, 
+      "name":   { "type": "text"  }     
+    }
+  }
+}
+'
+```
+
+**查看 mapping**
+
+```shell
+curl -X GET "localhost:9200/my-index-000001/_mapping?pretty"
+```
+
+**查看字段的 mapping**
+
+```shell
+GET /my-index-000001/_mapping/field/employee-id
+```
+
+### 字段类型
+
+**Array**
+
+没有专用的数据类型。都是 `Lucence` 的成果。
+- Lucene tokenizes the text into individual terms;
+- 每个 `term` 分别加入到 `indverted index` 中。
