--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -10,6 +10,46 @@ categories: ElasticSearch
 
 ## 入门操作
 
+### 集群创建索引
+
+3 节点的 `ES` 集群。
+
+创建 3 分片，1 副本的索引。
+```shell
+curl --request PUT \
+  --url http://localhost:9200/blogs \
+  --header 'content-type: application/json' \
+  --data '{
+   "settings" : {
+      "number_of_shards" : 3,
+      "number_of_replicas" : 1
+   }
+}'
+```
+
+![blog-2]({{ site.url }}/assets/imgs/es/blog-2.png)
+
+然后更新副本数量为 3。
+
+```shell
+curl --request PUT \
+  --url http://localhost:9200/blogs/_settings \
+  --header 'content-type: application/json' \
+  --data '{
+   "number_of_replicas" : 2
+}'
+```
+
+![blog-3]({{ site.url }}/assets/imgs/es/blog-3.png)
+
+
+自动生成的 `ID` 为 `Base64` 最多 20 个字符的 `GUID` 字符串。
+
+文档不可变，不能修改它们。使用相同的 `API` 进行替换：
+- `_version` 会变；
+- `created` 也变为 `false`；
+- 旧文档标记为删除，增加全新的文档。旧文档在后台被处理。
+
 ### `bulk` 批量加入文档
 
 ```shell
