--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -48,7 +48,12 @@ curl --request PUT \
 文档不可变，不能修改它们。使用相同的 `API` 进行替换：
 - `_version` 会变；
 - `created` 也变为 `false`；
-- 旧文档标记为删除，增加全新的文档。旧文档在后台被处理。
+- 旧文档标记为删除，增加全新的文档。旧文档在后台被处理。\
+
+### 乐观锁处理冲突
+
+重建文档的索引时通过指定 `version` 为我们的修改被应用的版本。
+- 假如并发修改，一个成功，另一个会收到 `409 Conflict` 的状态码。 
 
 ### `bulk` 批量加入文档
 
@@ -312,3 +317,324 @@ GET /my-index-000001/_mapping/field/employee-id
 没有专用的数据类型。都是 `Lucence` 的成果。
 - Lucene tokenizes the text into individual terms;
 - 每个 `term` 分别加入到 `indverted index` 中。
+
+
+## 分布式 Document 存储
+
+`shard = hash(routing) % number_of_primary_shards`
+
+- routing： `string`，默认是 `_id`。
+
+这里解释了为什么  `primary shard` 的数量只能在 `index` 创建时被设置而且不能改变。因为如果改变，之前的 `routing` 都会无效。
+
+
+下面所有请求发给 `Node 1`，则其称为 **协调节点**。
+
+### 写 Document 到集群
+
+Node1 - **Master** | Node2 | Node3
+---------|----------|----------
+R0 **P1** | R0 R1 | **P0** R1
+
+1. 发 `create` 或 `delete` 到 `Node1`
+2. 节点通过 `_id` 决定 `document` 属于 `shard0`。因此 `forward` `Node3`，因为 `主 shard0` 在那里。
+3. `Node3` 执行，如果成功并发 `forward` `Node1`, `Node2`。这俩节点返回陈宫，再返回成功给客户端。
+
+![write-doc-to-cluster]({{ site.url }}/assets/imgs/es/write-doc-to-cluster.png)
+
+设置：
+
+- `consistency`：
+  - one
+  - all
+  - 默认：int( (primary + number_of_replicas) / 2 ) + 1
+- `timeout`: 若没有足够的副本，则等待，希望更多的分片出现。默认 60s
+
+### 数据安全换性能
+`primary shard` 在**写操作前**需要 `quorum` 或多分片副本有效。
+
+`quorum = int( (primary + number_of_replicas) / 2 ) + 1`
+
+- 这样做是为了阻止写数据到 `the “wrong side” of a network partition`；
+- 如果有 2 个副本，则 `number_of_replicas = 3`。
+
+### 取出 Document
+
+1. 发 `get` 到 `Node1`；
+2. 通过计算 `_id` 决定属于 `shard0`。可以走到 `Node2` 获取数据；
+3. `Node2` 返回给 `Node1`，`Node1` 返回给客户。
+
+![get-doc-from-cluster]({{ site.url }}/assets/imgs/es/get-doc-from-cluster.png)
+
+- 在本例中， **协调节点**对于每次请求会**轮询所有的分片****来达到**负载均衡**；
+- 若副本分片中文档不存在，而住分片存在，则主节点返回。
+
+### 更新 Document
+
+1. 发 `update` 到 `Node1`；
+2. 请求被转给 `Node3`，因为**主分区**在 `Node3`；
+3. `Node3` 从主分片检索文档，修改 `_source` 中的 JSON，尝试重新索引住分片的文档；
+   > 如果被另一个进程修改，重复直到 `retry_on_conflict` 后放弃。
+4. 如果成功更新，则新版的文档并行转给 `Node1` 和 `Node2` 上的副本分片，重建索引。所有副本都返回成功，则 `Node3` 返回成功，协调节点湘客户端返回成功。
+
+![update-doc-cluster]({{ site.url }}/assets/imgs/es/update-doc-cluster.png)
+
+### mget & bulk
+
+本质上是**协调节点**发给所有包含主分片的节点主机请求。
+
+### 映射 & 分析
+
+数据可以分为：
+- 精确值；
+- 全文。
+
+
+
+### 倒排索引
+
+有 2 个文档，`content` 内容如下：
+1. The quick brown fox jumped over the lazy dog
+2. Quick brown foxes leap over lazy dogs in summer
+
+Term | Doc_1 | Doc_2
+---------|----------|----------
+Quick   |       |  X
+The     |   X   |
+brown   |   X   |  X
+dog     |   X   |
+dogs    |       |  X
+fox     |   X   |
+foxes   |       |  X
+in      |       |  X
+jumped  |   X   |
+lazy    |   X   |  X
+leap    |       |  X
+over    |   X   |  X
+quick   |   X   |
+summer  |       |  X
+the     |   X   |
+
+创建**倒排索引**，
+- 将 `content` **域**拆分为单独的**词[条]**(`token`)；
+- 创建一个包含所有不重复词条的排序列表；
+- 列出词条出现在哪个文档。
+
+如果 `normalize` 到标准格式：
+- `Quick` --> `quick`；
+- `foxes` 词干提取 `fox`。
+
+Term | Doc_1 | Doc_2
+---------|----------|----------
+brown   |   X   |  X
+dog     |   X   |  X
+fox     |   X   |  X
+in      |       |  X
+jump    |   X   |  X
+lazy    |   X   |  X
+over    |   X   |  X
+quick   |   X   |  X
+summer  |       |  X
+the     |   X   |  X
+
+上述两个步骤**分词**和**标准化**称为**分析**。
+
+分析由**分析器**执行，分析过程：
+- 将一块**文本**分成适合于倒排索引的独立的**词条** ；
+- 将这些词条**统一化为标准格式**以提高它们的“可搜索性”，或者 `recall`。
+  
+**分析器**包含：
+- 字符过滤器(Character filters)：分词前整理字符串，清洗；
+- 分词器：分为单个词条(token)；
+  - 标准：根据**单词边界**划分；
+  - 简单：**不是字母**的地方分割；
+  - 空格：在**空格**处分割；
+  - 语言：英文、中文。
+- Token 过滤器：最后每个 `token` 通过**token 过滤器**。
+  - 改变词条：`Quick` 小写；
+  - 删除词条：`a`, `and`, `the` 等无用词；
+  - 增加词条：增加同义词。
+
+**多值字段** 同 `full-text` 字段一样分析会产生多个 `terms`。因此多值字段中所有的值都必须是同一种数据类型。 `es` 会以数组中第一个字段的数据类型作为 `type`。
+
+
+**多级 objects**
+
+对象属性：
+
+```json
+{
+  "gb": {
+    "tweet": { 
+      "properties": {
+        "tweet":            { "type": "string" },
+        "user": { 
+          "type":             "object",
+          "properties": {
+            "id":           { "type": "string" },
+            "gender":       { "type": "string" },
+            "age":          { "type": "long"   },
+            "name":   { 
+              "type":         "object",
+              "properties": {
+                "full":     { "type": "string" },
+                "first":    { "type": "string" },
+                "last":     { "type": "string" }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+```
+```json
+{
+	"tweet": "Elasticsearch is very flexible",
+	"user": {
+		"id": "@johnsmith",
+		"gender": "male",
+		"age": 26,
+		"name": {
+			"full": "John Smith",
+			"first": "John",
+			"last": "Smith"
+		}
+	}
+}
+```
+会被索引为：
+
+```
+{
+    "tweet":            [elasticsearch, flexible, very],
+    "user.id":          [@johnsmith],
+    "user.gender":      [male],
+    "user.age":         [26],
+    "user.name.full":   [john, smith],
+    "user.name.first":  [john],
+    "user.name.last":   [smith]
+}
+```
+
+因为：
+
+- `Lucene` 不理解内部对象；
+- 其文档由一些列键值列表组成。
+
+
+## search
+
+**query all**
+
+```shell
+curl -X GET "localhost:9200/_search?pretty" -H 'Content-Type: application/json' -d'
+{}
+'
+```
+
+等同于 
+
+```shell
+curl -X GET "localhost:9200/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+    "query": {
+        "match_all": {}
+    }
+}
+'
+```
+
+**条件合并**
+
+```shell
+curl -X GET "localhost:9200/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+    "bool": {
+        "must": { "match":   { "email": "business opportunity" }},
+        "should": [
+            { "match":       { "starred": true }},
+            { "bool": {
+                "must":      { "match": { "folder": "inbox" }},
+                "must_not":  { "match": { "spam": true }}
+            }}
+        ],
+        "minimum_should_match": 1
+    }
+}
+'
+```
+
+查询语言使用情况：
+- 过滤(filtering queries)；
+  - **不评分**或**过滤**；
+  - 简单的查询或排除；
+  - 可缓存。
+- 查询(scoring queries)。
+  - 找到匹配的文档，计算每个匹配文档的相关性；
+  - 不可缓存。
+
+**组合多查询**：
+
+```shell
+curl -X POST "localhost:9200/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+  "query": {
+    "bool" : {
+      "must" : {
+        "term" : { "user.id" : "kimchy" }
+      },
+      "filter": {
+        "term" : { "tags" : "production" }
+      },
+      "must_not" : {
+        "range" : {
+          "age" : { "gte" : 10, "lte" : 20 }
+        }
+      },
+      "should" : [
+        { "term" : { "tags" : "env1" } },
+        { "term" : { "tags" : "deployed" } }
+      ],
+      "minimum_should_match" : 1,
+      "boost" : 1.0
+    }
+  }
+}
+'
+```
+
+- must: 必须，影响计分；
+- filter: 必须，不影响计分；
+  - 在其下的计分都为 0。
+- should: 应该；
+- must_not: 必须不。影响计分。
+
+**sort**
+
+```shell
+curl -X GET "localhost:9200/my-index-000001/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+  "sort" : [
+    { "post_date" : {"order" : "asc"}},
+    "user",
+    { "name" : "desc" },
+    { "age" : "desc" },
+    "_score"
+  ],
+  "query" : {
+    "term" : { "user" : "kimchy" }
+  }
+}
+'
+```
+
+**多字段**
+
+### 相关性
+
+相似读算法：检索词频率/反向文档频率， `TF/IDF`。
+- 词频：检索词在该字段出现的频率；
+- 反向文档频率：每个检索词在索引中出现的频率，越高，相关性越低；
+- 字段长度：越长，相关性越低。
