--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -638,3 +638,18 @@ curl -X GET "localhost:9200/my-index-000001/_search?pretty" -H 'Content-Type: ap
 - 词频：检索词在该字段出现的频率；
 - 反向文档频率：每个检索词在索引中出现的频率，越高，相关性越低；
 - 字段长度：越长，相关性越低。
+
+### Doc Values
+
+在**匹配文档**时倒排索引很**快**，但是**排序不理想**。
+
+因为在排序时，我们需要倒排索引中某个字段的集合，**转置**倒排索引。
+
+**转置**被称为**列存储**。
+
+使用场景：
+- 字段排序；
+- 字段聚合；
+- 某些过滤，地理位置；
+
+当**数据集 < 可用内存**，所有文档在内存，否则在页缓存中。
