--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -653,3 +653,79 @@ curl -X GET "localhost:9200/my-index-000001/_search?pretty" -H 'Content-Type: ap
 - 某些过滤，地理位置；
 
 当**数据集 < 可用内存**，所有文档在内存，否则在页缓存中。
+
+### 分布式检索
+
+一个文档的唯一性由 `_index` + `routing values`(default `_id`) 组成。
+
+#### 查询阶段
+
+- 查询**广播**到索引**每个分片拷贝**（**主** 或 **副**）；
+- 每个分片本地执行搜索并构建一个优先队列。
+
+e.g. 
+
+```json
+{
+    "from": 90,
+    "size": 10
+}
+```
+
+会构建一个能放入 **100** 条文档的优先队列。
+
+1. 客户端发送一个 `search` 请求到 `Node 3` ， `Node 3` 会创建一个大小为 `from + size`（这里 **100**） 的空优先队列；
+2. `Node 3` 将**查询请求转发**到索引的**每个主分片或副本分片**中。每个分片在**本地执行查询**并添加结果到大小为 `from + size` 的本地有序优先队列中；
+3. 每个分片返回各自优先队列中所有文档的 `ID` 和排序值给**协调节点**，也就是 `Node 3`，它**合并这些值到自己的优先队列中**来产生一个全局排序后的结果列表。
+
+![cluster-search]({{ site.url }}/assets/imgs/es/cluster-search.png)
+
+#### 取回阶段
+
+就是通过 `ID` 在相应节点找到文档的阶段。
+
+1. **协调节点**辨别出哪些文档需要被取回并**向相关的分片提交**多个 `GET` 请求；
+2. **每个分片**加载并 **丰富** 文档，如果有需要的话，接着返回文档给协调节点；
+3. 一旦所有的文档都被取回了，协调节点返回结果给客户端。
+
+上例中，只需要 [91-100] 这 10 条结果。前面 90 个全部抛弃。
+
+> 注意 **深分页**。
+
+使用 `scroll` 来处理深分页。
+
+- 游标查询先做查询初始化，然后批量拉取结果。
+- 取某个时间点的快照，之后的变化被忽略。
+
+## 索引管理
+
+### 类型和映射
+
+`Lucene` **没有文档类型**，每个文档的类型名存储在 `_type` 元数据字段上。检索文档时通过 `_type` 使用过滤器限制返回这个类型的文档。
+
+**没有映射**，将复杂 `JSON` 扁平化。
+
+由于 `type` 已经被废除，下面只用于了解。
+
+每个类型的字段在 `Lucene` 中只有一个映射。
+
+> 映射在本质上被 扁平化 成一个单一的、全局的模式。
+
+默认，在 `_source` 字段存储代表文档体的JSON字符串。
+
+
+## 分片内部原理
+
+倒排索引还会存入：
+- 每个 `token` 出现过的文档总数；
+- 在对应的文档中一个 `token` 出现的总次数；
+- `token` 在文档的顺序；
+- 文档的长度；
+- 所有文档的平均长度。。。
+
+**早期的全文检索**会为**整个文档**集合**建立**一个**很大的倒排索引**并将其**写入到磁盘**。 一旦**新的索引就绪**，**旧的就会被其替换**，这样最近的变化便可以被检索到。
+
+优点：
+- 不需要锁；
+- 被读入内核的文件系统缓存，留在那。大部分请求就会走内存；
+- 单个的倒排索引允许**数据被压缩**，**减少磁盘 I/O** 和需要**被缓存到内存的索引的使用量**。
