--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -723,9 +723,71 @@ e.g.
 - 文档的长度；
 - 所有文档的平均长度。。。
 
-**早期的全文检索**会为**整个文档**集合**建立**一个**很大的倒排索引**并将其**写入到磁盘**。 一旦**新的索引就绪**，**旧的就会被其替换**，这样最近的变化便可以被检索到。
+**早期的全文检索**
+
+为**整个文档**集合**建立**一个**很大的倒排索引**并将其**写入到磁盘**。 一旦**新的索引就绪**，**旧的就会被其替换**，这样最近的变化便可以被检索到。
 
 优点：
 - 不需要锁；
 - 被读入内核的文件系统缓存，留在那。大部分请求就会走内存；
 - 单个的倒排索引允许**数据被压缩**，**减少磁盘 I/O** 和需要**被缓存到内存的索引的使用量**。
+
+**动态更新索引**
+
+要保留上面的**不变性**实现**倒排索引**的更新。
+
+> 用更多的索引。
+
+**之前**要反映最近的修改需要**重写整个倒排索引**，现通过增加新的补充索引来实现。
+
+增加了**提交点**的概念。提交点是**列出了所有已知段的文件**。
+
+> 有点类似于 `Git` 的 `Commit`。
+
+- **新文档**被收集到**内存缓存**；
+- 不时地，缓存被**提交**：
+  - 新的段（追加的倒排索引）写入磁盘。
+  - 新的包含新段名字的**提交点**被写入磁盘。
+  - 磁盘 `fsync`，在文件缓存系统中的所有等待的写都刷新到磁盘保证物理写入。
+- 新的段被开启，让它包含的文档可以被搜索；
+- 内存缓存被清空，等待新的文档。
+
+![commit-point]({{ site.url }}/assets/imgs/es/commit-point.png)
+
+![after-commit]({{ site.url }}/assets/imgs/es/after-commit.png)
+
+**删除 & 更新**
+
+不能从段中移除，不能修改就的段。
+
+每个提交点包含一个 `.del` 文件，文件中列出这些被删除文档的段信息。
+
+当文档被**删除**时，只是在 `.del` 文件中被标记删除。扔可被查询匹配到，但最终结果被返回前从结果集移除。
+
+**轻量级实现新文档可搜索**
+
+每次索引一个文档去 `fsync` 代价很大。
+
+> ES - 文件缓存 - 磁盘。
+
+文件在缓存后就可以被打开和读取了。
+
+`Lucene` **允许新段被写入和打开**—​使其包含的文档在**未进行一次完整提交时便对搜索可见**。
+
+使用 `refresh` 写入和打开一个新段的轻量的过程。默认每个分片每秒自动刷新一次。
+
+```
+POST /_refresh
+POST /blogs/_refresh
+
+PUT /my_logs
+{
+  "settings": {
+    "refresh_interval": "30s" 
+  }
+}
+```
+
+**持久化变更**
+
+在每秒刷新间隔中，若出现宕机，**为了确保数据在失败中恢复**。增加了 `translog`或**事务日志**。
