--- a/_posts/2020-09-11-Docker 教程笔记.md
+++ b/_posts/2020-09-11-Docker 教程笔记.md
@@ -1063,6 +1063,57 @@ ENTRYPOINT ["hamba"]
 
 ---
 
+# Swarm 教程
+
+## 基本概念
+
+- cluster
+  - node
+    - manager: 对其进行 `api` 调用，只有一个是 `leader`，其他的将请求转给 `leader`。
+    - worker: 从 `manager` 那获得指令。
+  - service: `leader` 使用不同子系统将 `service` 分解城 `task`。
+    - task：与特殊的 `container` 对应，被分配个一个特殊的 `node`。
+
+
+## 启动
+
+在 `swarm` 模式下，每个 `node` 将自己的 `ip` 宣告给其他 `node`。
+
+```
+# 控制用
+--advertise-addr eth0:7777
+--listen-addr eth0:7777 
+# 数据用
+--data-path-addr
+```
+
+`task` 的声明周期：
+- `assigned`: 已经被分配个一个 `node`;
+- `preparing`: 拉取镜像；
+- `starting`
+- `running`
+
+![docker-swarm-break-down]({{ site.url }}/assets/imgs/k8s/docker-swarm-break-down.png)
+
+
+### manager 的容错性
+
+`2N + 1` 可以容忍 `N` 失败。
+
+不能使所有节点都成 `manager`。
+
+- `Raft` 将**写**都发给所有的节点；
+- 数量众多的群体很难达成一致；
+- 每个节点 ping `Manager` < 10ms。
+
+最佳规范，节点数：
+- 3 - 5：所有都是 `manager`;
+- 5 - 10: 剩下都是 `worker`；
+- 10 - 100：5 个最稳定的做 `manager`；
+- \> 100: `manager` 得 4C, 16G, SSD。 
+
+---
+
 # K8S 教程
 
 ## 部署应用
