--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -156,7 +156,7 @@ curl --request GET \
 ```
 
 - 这样会查询 `address` 包含 `mill` **或** `lane` 的；
-- 要精确查包含 `mill lane` 的就要吧 `match` --> `match_phrase`。
+- 要精确查包含 `mill lane` 的就要 `match` --> `match_phrase`。
 
 ```json
 {
@@ -791,3 +791,321 @@ PUT /my_logs
 **持久化变更**
 
 在每秒刷新间隔中，若出现宕机，**为了确保数据在失败中恢复**。增加了 `translog`或**事务日志**。
+
+- 上述新文档被添加到 `in-memory buffer` 并被加到了 `Translog`(**事务日志**)；
+
+![translog]({{ site.url }}/assets/imgs/es/translog.png)
+
+- 每秒刷新一次；
+  - `In-memory Buffer` 中的文档被**写入一个新的段**中，并不进行 `fsync`；
+  - 段打开，使其可搜索；
+  - `In-memory Buffer` 被清空。
+
+![translog1]({{ site.url }}/assets/imgs/es/translog1.png)
+
+- 每隔一段时间：`translog` 变大，索引被刷新。一个新的 `translog` 被创建，一个全量提交被执行。
+  - 所有在**内存缓冲区**的文档都被**写入一个新的段**。
+  - **缓冲区**被**清空**。
+  - 一个**提交点**被**写入硬盘**。
+  - **文件系统缓存**通过 `fsync` 被刷新（flush）。
+  - 老的 `translog` 被**删除**。
+
+![translog2]({{ site.url }}/assets/imgs/es/translog2.png)
+
+> `translog` 被用来提供实时 `CRUD`。首先检查 `translog` 任何最近的变更。总能实时获取文档的最新版本。
+
+执行一次提交并截断 `translog` 的行为称作一次 `flush`。
+- 分片每 `30s` 自动刷新；
+- `translog` 太大时刷新。
+
+`translog` 文件被 `fsync` 到磁盘的频率：
+- 每 5s；
+- **每次写请求完**成后执行。会带来一些性能损失，但是相对较小。
+
+**段合并**
+
+自动刷新每秒创建新段。
+- 会消耗**文件句柄**、**内存**、**CPU**；
+- 每个搜索请求比训轮流检查每个段。越多越慢。
+
+在**后台进行段合并**解决。小 -> 大 -> 更大。
+
+
+## 深入搜索
+
+### 结构化搜索
+
+探寻**具有内在结构数据**的过程。
+- 简单的进行**包括**或者**排除**；
+- 不关心评分。
+
+```shell
+curl -X GET "localhost:9200/my_store/products/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+    "query" : {
+        "constant_score" : { 
+            "filter" : {
+                "term" : { 
+                    "price" : 20
+                }
+            }
+        }
+    }
+}
+'
+```
+
+在非评分查询时同时执行：
+- 查找匹配文档；
+- 创建 `bitset`，描述哪个文档包含这个 `term`；
+  - `roaring bitmap` 作为内部数据结构。
+- 每个查询生成 `bitset`，迭代 `bitset` 找到满足的集合；
+- 缓存非评分查询而获取更快的访问，每个索引跟踪保留查询使用的历史状态。
+  - 如果最近的 `256` 次查询备用到，候选缓存。只有超过 `10000` 的文档才汇缓存；
+  - 缓存淘汰基于 `LRU`。
+
+### 组合过滤器
+
+```json
+{
+   "bool" : {
+      "must" :     [],
+      "should" :   [],
+      "must_not" : [],
+   }
+}
+```
+
+```bash
+curl -X GET "localhost:9200/my_store/products/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+   "query" : {
+      "filtered" : {
+         "filter" : {
+            "bool" : {
+              "should" : [
+                { "term" : {"productID" : "KDKE-B-9947-#kL5"}}, 
+                { "bool" : { 
+                  "must" : [
+                    { "term" : {"productID" : "JODL-X-1937-#pV7"}}, 
+                    { "term" : {"price" : 30}} 
+                  ]
+                }}
+              ]
+           }
+         }
+      }
+   }
+}
+'
+```
+
+## 聚合
+
+### 桶 & 指标
+
+- **桶**：满足特定条件的文档的集合；
+- **指标**：简单的数字预算。
+
+聚合 = 桶 + 指标。
+
+
+```shell
+curl -X GET "localhost:9200/cars/transactions/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+   "size" : 0,
+   "aggs": {
+      "colors": {
+         "terms": {
+            "field": "color"
+         },
+         "aggs": {
+            "avg_price": { 
+               "avg": {
+                  "field": "price"
+               }
+            },
+            "make": { 
+                "terms": {
+                    "field": "make" 
+                }
+            }
+         }
+      }
+   }
+}
+'
+```
+
+对 `color` 进行聚合后对 `make` 进行聚合，指标为 **平均 price**。
+
+
+### 按时间查询
+
+
+```shell
+curl --request GET \
+  --url http://192.168.110.173:9200/_search \
+  --header 'content-type: application/json' \
+  --data '
+{
+   "size" : 0,
+   "aggs": {
+      "sales": {
+         "date_histogram": {
+            "field": "sold",
+            "interval": "month",
+            "format": "yyyy-MM-dd",
+            "min_doc_count" : 0, 
+            "extended_bounds" : { 
+                "min" : "2014-01-01",
+                "max" : "2014-12-31"
+            }
+         }
+      }
+   }
+}
+'
+```
+
+统计再聚合
+
+```shell
+curl -X GET "localhost:9200/cars-transaction/_search?pretty" -H 'Content-Type: application/json' -d'
+{
+   "size" : 0,
+   "aggs": {
+      "sales": {
+         "date_histogram": {
+            "field": "sold",
+            "interval": "quarter", 
+            "format": "yyyy-MM-dd",
+            "min_doc_count" : 0,
+            "extended_bounds" : {
+                "min" : "2014-01-01",
+                "max" : "2014-12-31"
+            }
+         },
+         "aggs": {
+            "per_make_sum": {
+               "terms": {
+                  "field": "make"
+               },
+               "aggs": {
+                  "sum_price": {
+                     "sum": { "field": "price" } 
+                  }
+               }
+            },
+            "total_sum": {
+               "sum": { "field": "price" } 
+            }
+         }
+      }
+   }
+}
+'
+```
+
+### 过滤 & 过滤桶 & 后过滤
+
+## 数据建模
+
+### 处理关联关系
+
+#### 应用层连接
+
+多次分别查询数据，返回后合并。
+
+#### 非规范化数据
+
+每个文档保持一定数量的冗余副本。
+
+#### 字段折叠
+
+```
+PUT /my_index/_mapping/blogpost
+{
+  "properties": {
+    "user": {
+      "properties": {
+        "name": { 
+          "type": "string",
+          "fields": {
+            "raw": { 
+              "type":  "string",
+              "index": "not_analyzed"
+            }
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+### 嵌套对象
+
+```json
+PUT /my_index
+{
+  "mappings": {
+    "blogpost": {
+      "properties": {
+        "comments": {
+          "type": "nested", 
+          "properties": {
+            "name":    { "type": "string"  },
+            "comment": { "type": "string"  },
+            "age":     { "type": "short"   },
+            "stars":   { "type": "short"   },
+            "date":    { "type": "date"    }
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+指定类型为 `nested`。
+
+查询：
+
+```json
+GET /my_index/blogpost/_search
+{
+  "query": {
+    "bool": {
+      "must": [
+        {
+          "match": {
+            "title": "eggs" 
+          }
+        },
+        {
+          "nested": {
+            "path": "comments", 
+            "query": {
+              "bool": {
+                "must": [ 
+                  {
+                    "match": {
+                      "comments.name": "john"
+                    }
+                  },
+                  {
+                    "match": {
+                      "comments.age": 28
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      ]
+}}}
+```
+
+### 父子关系文档映射
