--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -56,7 +56,9 @@ categories: Java
 
 #### 运行时常量池
 
-**是方法区的一部分**。存放 **编译期生成的字面量** 和 **符号引用** 以及 **翻译过来的直接引用**。可以在运行期间放入。
+- 是**方法区的一部分**；
+- 存放 **编译期生成的字面量** 和 **符号引用** 以及 **翻译过来的直接引用**；
+- class 文件中 `constant_pool` 表 的 per `class` 或者 `interface` 运行时表示； 
 
 #### 直接内存
 
