--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -7,3 +7,32 @@ categories: Architecture
 
 # DDIA 笔记
 
+## 可靠性，可扩展性，可维护性
+
+### 可靠性
+
+**“即使出现问题，也能继续正确工作”**
+
+- 原因：故障（`fault`）系统的一部分状态偏离其标准；、
+  - 硬件故障（`hardware faults`）随机的、相互独立的；
+  - 软件错误（`systematic error`）
+  - 人为错误
+- 应对：容错（`fault-tolerant`）或韧性（`resilient`）。
+
+### 可扩展性
+
+**描述系统应对负载增长能力**。
+
+负载：用负载参数（`load parameters`）的数字来描述。
+- `qps`;
+- IO R/W rate;
+- 活跃用户数量；
+- 缓存命中率等。
+
+当**负载增加**会发生什么：
+- **增加负载参数**并**保持系统资源**（CPU、内存、网络带宽等）不变时，系统性能将受到什么影响？
+- **增加负载参数**并**希望保持性能不变**时，需要**增加多少系统资源**？
+
+上面问题需要性能数据：
+- 吞吐量（`throughput`）；
+- 响应时间（`response time`）。
