--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -35,4 +35,6 @@ categories: Architecture
 
 上面问题需要性能数据：
 - 吞吐量（`throughput`）；
-- 响应时间（`response time`）。
+  - 每秒可以处理的记录数量；
+  - 在特定规模数据集上运行作业的总时间。
+- 响应时间（`response time`）客户端发送请求到接收响应之间的时间。
