--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -38,3 +38,33 @@ categories: Architecture
   - 每秒可以处理的记录数量；
   - 在特定规模数据集上运行作业的总时间。
 - 响应时间（`response time`）客户端发送请求到接收响应之间的时间。
+  - vs. 延迟
+    - 延迟(`latency`): 请求等待处理的持续时长，休眠状态，等待服务；
+    - 响应时间 = 服务时间（`service time`） + 网络延迟 + 排队延迟。
+  - 可以测量的数值分布（`distribution`）
+    - 中位数, p50;
+    - p95
+    - p99
+    - p999
+    - 尾部延迟（tail latencies），非常重要。最有价值客户。
+
+应对负载增长：
+- 纵向扩展（`scaling up`）
+- 横向扩展（`scaling out`）
+
+### 可维护性
+
+---
+
+## 数据模型与查询语言
+
+层层叠加的数据模型构建多数应用。
+
+每层数据模型的关键问题：**如何用低一层数据来表示**。
+
+- App Dev: 观察世界次啊用对象或数据结构，一起相应 API 建模；
+- 存储数据结构：用通用数据模型，`JSON` 或 `XML` 或 `ER` 中的表以及图模型；
+- DB Dev: 如何以内存、磁盘或网络上的字节来表示数据；
+- 硬件工程师: 电流，光脉冲，磁场或者其他东西来表示字节。
+
+**每个层**都通过**提供一个明确的数据模型来隐藏更低层次中的复杂性**。
