--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -68,3 +68,33 @@ categories: Architecture
 - 硬件工程师: 电流，光脉冲，磁场或者其他东西来表示字节。
 
 **每个层**都通过**提供一个明确的数据模型来隐藏更低层次中的复杂性**。
+
+### 关系型
+
+数据被组织成**关系**（表），其中每个关系是**元组**（SQL中称作行)的无序集合。
+
+用于：典型的**事务处理**和**批处理**。
+
+#### 阻抗不匹配（impedance mismatch）
+
+大多数应用程序开发都使用面向对象的编程语言来开发，用来转化数据表示和关系数据库元组的代码很冗繁，执行时也有不少耗时。这种**应用程序和数据库表示信息的模式之间的不匹配**有时也被称为`impedance mismatch`。
+
+`ORM` 能**减轻**所需的代码数量。
+
+![bill-gates-linkedin]({{ site.url }}/assets/imgs/ddia/bill-gates.png)
+
+这里使用 `user_id` 作为标识。一对多的关系表示为：
+- 单独的表中(`positions`)，对 `User` 表提供外键引用；
+- 结构化 `JSON` 或 `XML` 存于列中；
+- 直接 `JSON` 文档表示。
+  - 更好的局部性，所有的相关信息再一个地方，一个查询足够；
+  - 一对多隐含了树状结构，`JSON` 使得这个结构明确。
+
+![one-to-many-json-tree]({{ site.url }}/assets/imgs/ddia/one-to-many-json-tree.png)
+
+### NoSQL
+
+- 更好的可扩展性；
+- 免费和开源；
+- 关系模型不能很好地支持一些特殊的查询操作；
+- 更具多动态性与表现力的数据模型。
