--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -92,6 +92,31 @@ categories: Architecture
 
 ![one-to-many-json-tree]({{ site.url }}/assets/imgs/ddia/one-to-many-json-tree.png)
 
+#### 多对一和多对多
+
+`region_id` 和 `industry_id` 是以 **ID** 而不是~~文本~~的形式。
+
+这些可以通过标准列表选择或者文本框输入。选择的优势：
+- 样式和拼写统一；
+- 避免歧义；
+- 易于更新——名称只存储在一个地方；
+- 更好的搜索。
+
+这其实是**副本**问题：
+- `ID` 时对人类有意义的信息只存在一处，**ID对人类没有任何意义，因而永远不需要改变**；
+- **文本**时则在用的每一处。
+
+去除此类重复是数据库**规范化**（normalization） 的关键思想。
+
+这种**多对一的关系与文档模型不太吻合**。
+
+`organization`（用户工作的公司）和 `school_name`（他们学习的地方）只是字符串。或许应该是引用。
+
+![many-to-many]({{ site.url }}/assets/imgs/ddia/many-to-many.png)
+
+每个虚线矩形内的数据可以分组成一个文档，但是对单位，学校和其他用户的引用需要表示成引用，并且在查询时需要连接。
+
+
 ### NoSQL
 
 - 更好的可扩展性；
