--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -7,7 +7,7 @@ categories: Architecture
 
 # DDIA 笔记
 
-## 可靠性，可扩展性，可维护性
+## 1. 可靠性，可扩展性，可维护性
 
 ### 可靠性
 
@@ -56,7 +56,7 @@ categories: Architecture
 
 ---
 
-## 数据模型与查询语言
+## 2. 数据模型与查询语言
 
 层层叠加的数据模型构建多数应用。
 
@@ -123,3 +123,41 @@ categories: Architecture
 - 免费和开源；
 - 关系模型不能很好地支持一些特殊的查询操作；
 - 更具多动态性与表现力的数据模型。
+
+---
+
+## 3. 存储与检索
+
+**为什么要关心数据库内部存储与检索的机理？**
+
+> 你确实需要从许多可用的存储引擎中选择一个合适的。为了协调存储引擎以适配应用工作负载，你也需要大致了解存储引擎在底层究竟做什么。
+
+存储引擎:
+- 日志结构（log-structured）
+- 面向页面（page-oriented）
+
+
+```sh
+#!/bin/bash
+db_set () {
+    echo "$1,$2" >> database
+}
+
+db_get () {
+    grep "^$1," database | sed -e "s/^$1,//" | tail -n 1
+}
+
+#!eg
+$ db_set 123456 '{"name":"London","attractions":["Big Ben","London Eye"]}' $ 
+
+$ db_set 42 '{"name":"San Francisco","attractions":["Golden Gate Bridge"]}'
+
+$ db_get 42
+{"name":"San Francisco","attractions":["Golden Gate Bridge"]}
+```
+
+**日志**（log），也就是一个 **仅追加**（append-only） 的数据文件。
+
+而这查找是 `O(n)`。所以需要加 **索引**（index）,是从主数据衍生的**附加**（additional）结构。
+
+> 大致思想是，**保存一些额外的元数据作为路标**，帮助你找到想要的数据。
