--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -64,8 +64,16 @@ categories: 面试
 
 ## MySQL
 
+
+![one-to-many-json-tree]({{ site.url }}/assets/imgs/resume/mysql.svg)
 ```plantuml
 @startmindmap
+<style>
+boxless {
+FontColor darkgreen
+}
+</style>
+
 * MySQL
 
 ** Log [[https://zhuanlan.zhihu.com/p/58011817 MySQL日志分类及简介]]
@@ -88,11 +96,15 @@ categories: 面试
 *** Atomicity 中止（abort）
 ****_ 能够在错误时中止事务，丢弃该事务进行的所有写入变更的能力
 ****_ 事物
-*** Consistency
+
+*** Consistency 不变量（invariants）
 ****_ doublewrite buffer
+
 *** Isolation
 ****_ 锁
-****_ 事物隔离级别
+**** 事物隔离级别
+*****_ 读已提交（Read Committed）
+
 *** Durability
 ****_ doublewrite buffer
 ****_ 运维
@@ -100,6 +112,40 @@ categories: 面试
 ** 隔离级别
 ** MVCC
 ** 幻读
+
+left side
+
+** 锁
+***_ Shared and Exclusive Locks
+***_ Intention Locks
+***_ Record Locks
+***_ Gap Locks *
+***_ Next-Key Locks *
+***_ Insert Intention Locks
+***_ AUTO-INC Locks
+
+** explain
+*** select_type
+****_ simple: 无 union 或 子查询
+****_ primary: 最外
+
+*** type
+****_ system: 表只有一行
+****_ const: 最多一行匹配；主键或者唯一键
+****_: 
+eq_ref:  对于前面的
+表中各种组合，此表只取出一行
+;
+****_:
+ref 对于前面的表的各种组合，
+此表匹配的索引值
+;
+****_ ref_or_null: 像 ref 但再搜索 NULL 值
+****_: 
+index_merge: key 中反映的是索引
+使用的 key 的列表。
+一张表的多个 range 扫描合并成一个
+;
 @endmindmap
 ```
 
@@ -139,6 +185,23 @@ categories: 面试
 ***_ 实现方法
 ***_ 过期时间的制定
 ***_ 续锁
+***_ RedLock
 
+@endmindmap
+```
+
+## 分布式
+
+```plantuml
+@startmindmap
+* 原理
+** 一致性hash原理
+***_ 解决的问题
+***_ 数据倾斜
+***_ 2^32 ?
+
+** CAP
+
+** BASE
 @endmindmap
 ```
