--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -145,6 +145,8 @@ ref 对于前面的表的各种组合，
 index_merge: key 中反映的是索引
 使用的 key 的列表。
 一张表的多个 range 扫描合并成一个
+合并可能是交集、并集、差集
+****_ unique_subquery: in 
 ;
 @endmindmap
 ```
