--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -30,6 +30,44 @@ categories: 面试
 **** 死锁
 *****_ 产生条件
 *****_ 排查
+**** reentrantlock
+*****_ 实现原理，加锁和释放锁的一个过程
+*****_ aqs
+*****_ 公平和非公平
+*****_ 可重入
+*****_ 可中断
+
+*** 并发工具类
+**** concurrenthashmap
+*****_ 怎么保证线程安全的
+*****_ 为什么用synchronized
+*****_ 分段锁有什么问题
+*****_ hash算法做了哪些优化
+**** threadlocal
+*****_ 什么场景下使用的
+*****_ 原理
+*****_ hash冲突怎么办
+*****_ 扩容实现
+*****_ 内存泄漏产生原因，怎么解决
+
+
+** 集合
+
+*** hashmap
+****_ 原理, put & get
+****_ 8转红黑树?
+****_ 什么时候扩容? 0.75？
+****_ 扩容步骤，为什么分高低位
+****_ 头插法有什么问题，为什么线程不安全 
+
+*** arraylist
+****_ 数组加transient
+****_ 扩容原理
+
+
+** 动态代理
+***_ spring aop的理解，解决什么问题,实现原理
+***_ jdk动态代理,cglib区别，优缺点
 
 @endmindmap
 ```
@@ -55,6 +93,8 @@ categories: 面试
 ** GC
 *** CMS
 *** G1
+***_ gc roots有哪些
+***_ 什么情况下会发生full gc
 
 ** OOM
 ***_ 排查
@@ -67,7 +107,7 @@ categories: 面试
 
 ![one-to-many-json-tree]({{ site.url }}/assets/imgs/resume/mysql.svg)
 ```plantuml
-@startmindmap
+@startmindmap MySQL 脑图
 <style>
 boxless {
 FontColor darkgreen
@@ -125,33 +165,104 @@ left side
 ***_ AUTO-INC Locks
 
 ** explain
+***_ id
 *** select_type
-****_ simple: 无 union 或 子查询
-****_ primary: 最外
+****_ **SIMPLE**: 无 union 或 子查询
+****_ **PRIMARY**: 最外
+****_ **SUBQUERY**: 子查询中第一个 SELECT
+****_ **DERIVED**
+****_ **MATERIALIZED**
 
 *** type
-****_ system: 表只有一行
-****_ const: 最多一行匹配；主键或者唯一键
-****_: 
-eq_ref:  对于前面的
+*** Extra
+***_ possible_keys
+***_ key 
+***_ key_len: 使用的 key 的长度
+***_ rows
+***_ filterd
+***_ extra
+
+
+** 索引
+*** 种类
+****_ 聚簇索引
+****_ 二级索引
+****_ 覆盖索引
+***_ 自动生成的主键有什么问题
+
+@endmindmap
+```
+
+```plantuml
+@startmindmap explain type 脑图
+* explain type
+**_ **system**: 表只有一行
+**_ **const**: 最多一行匹配；主键或者唯一键
+**_: 
+**eq_ref**:  对于前面的
 表中各种组合，此表只取出一行
 ;
-****_:
-ref 对于前面的表的各种组合，
+**_:
+**ref**: 对于前面的表的各种组合，
 此表匹配的索引值
 ;
-****_ ref_or_null: 像 ref 但再搜索 NULL 值
-****_: 
-index_merge: key 中反映的是索引
+
+**_ **ref_or_null**: 像 ref 但再搜索 NULL 值
+
+**_: 
+**index_merge**: key 中反映的是索引
 使用的 key 的列表。
 一张表的多个 range 扫描合并成一个
 合并可能是交集、并集、差集
-****_ unique_subquery: in 
 ;
+left
+**_ **unique_subquery**: in 中的 eq_ref
+**_:
+**index_subquery**: 类似 unique_subquery
+但不是在 unique 索引上
+;
+**_ **range**: 指定区间中的行被拉取
+**_: 
+**index**: 连接类型同 all,只是索引树被扫描
+覆盖索引满足查询的数据，Extra:  Using index，比 all 快，索引数据小
+按照索引顺序进行全表查询，Extra 中没有
+;
+**_ **ALL**: 对先前表中的每个行组合进行全表扫描。非常不好，加索引
 @endmindmap
 ```
 
 
+
+```plantuml
+@startmindmap explain extra 脑图
+* explain extra
+**_ **backward index scan**: 使用 descending index(降序索引)
+**_ **Distinct**: 找到第一个符合的行后就不再找
+**_: 
+**FirstMatch(tbl_name)** 半连接找到第一个
+半连接是一个子查询，它主要用于去重。只返回存在内表中的外表的记录，
+EXSIT和IN语句组成的布尔表达式
+;
+**_:
+**Using filesort** MySQL 必须执行额外的检查以找出如何按排序顺序检索行
+找不到合适的索引来 order by。读表行来排序，如果临时结果集太大使用临时硬盘空间。
+;
+**_ **Using index**: 使用覆盖索引，不回表。也可以 type: index & key: primary
+**_: 
+**Using index condition**: 索引条件下推，减少读全表行的可能性。
+没有 ICP: base table 遍历 index 来找行，交给 存储引擎，其在 WHERE。
+有 ICP: where 中部分列能通过 index 满足，存储引擎
+;
+**_:
+**Using temporary**: 需要创建临时表保留结果
+一般是 group by 和 order by 不同的字段
+;
+**_:
+**Using where** 限制了哪些行匹配到下张表或者传给客户端。
+如果 join type: [all | index], 而没有此项，就全表了，有问题。
+;
+@endmindmap
+```
 ## Redis
 
 ```plantuml
@@ -189,6 +300,10 @@ index_merge: key 中反映的是索引
 ***_ 续锁
 ***_ RedLock
 
+** 线程模型
+***_ epoll
+***_ 单线程的优缺点
+***_ 什么情况下会出现阻塞，怎么解决
 @endmindmap
 ```
 
@@ -205,5 +320,7 @@ index_merge: key 中反映的是索引
 ** CAP
 
 ** BASE
+
+** 幂等
 @endmindmap
 ```
