--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -93,6 +93,7 @@ categories: Java
         - 偏向线程 `ID`
         - 偏向时间戳
     - 类型指针：确定这个对象时哪个类型的实例
+    - 数组长度，如果对象是数组
 - 实例数据：**相同宽度**的字段总是被**分配到一起**存放，父类分配在子类之前(`+XX:FieldsAllocationStyle`)。子类较窄的允许插入到父类间隙中(`+XX:CompactFields`)。
 - 对齐填充：8字节整数倍。
 
