--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -84,8 +84,8 @@ categories: Java
 
 ### 对象内存布局
 
-- 对象头：`Mark Word`
-    - 对象自身运行时的数据
+- 对象头：
+    - 对象自身运行时的数据 `Mark Word`
         - HashCode
         - GC 年龄分代
         - 锁状态
