--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -50,6 +50,26 @@ categories: 面试
 *****_ 扩容实现
 *****_ 内存泄漏产生原因，怎么解决
 
+** 线程
+*** 线程状态
+****_ NEW
+****_ RUNNABLE
+**** BLOCKED
+*****_ 等待 montor lock 进入同步区
+*****_ Object.wait() 后阻塞重新进入同步区
+**** WAITING
+*****_ 无限 Object.wait()
+*****_ 无限 Thread.join()
+*****_ LockSupport.park
+**** TIMED_WAITING
+*****_ Thread.sleep
+*****_ 有限 Object.wait()
+*****_ 有限 Thread.join()
+*****_ LockSupport.parkNanos
+*****_ LockSupport.parkUntil
+****_ TERMINATED
+
+***_ interrupt()
 
 ** 集合
 
@@ -71,6 +91,8 @@ categories: 面试
 
 @endmindmap
 ```
+
+---
 
 ## JVM
 
@@ -99,8 +121,35 @@ categories: 面试
 ** OOM
 ***_ 排查
 ***_ 产生原因
+
+** 内存区域
+*** 对象一定分配在堆上么
+****_ TLAB
+****_ 标量替换
+
+*** 对象内存布局
+**** 对象头
+*****_ 对象自身运行时的数据
+*****_ 类型指针
+*****_ [数组长度]
+****_ 实例数据
+****_ 对齐填充
+
+*** 内存结构
+****_ 堆（Heap）
+****_ 方法区（Method Area）
+****_ 程序计数器（Program Counter Register）
+****_ 虚拟机栈（JVM Stacks）
+****_ 本地方法栈（Native Method Stacks）
+
+** 前端编译与优化
+***_ JIT
+***_ 逃逸分析
+
 @endmindmap
 ```
+
+---
 
 ## MySQL
 
@@ -143,13 +192,17 @@ FontColor darkgreen
 *** Isolation
 ****_ 锁
 **** 事物隔离级别
-*****_ 读已提交（Read Committed）
+' *****_ 读已提交（Read Committed）
 
 *** Durability
 ****_ doublewrite buffer
 ****_ 运维
 
 ** 隔离级别
+***_  READ UNCOMMITTED
+***_  READ COMMITTED
+***_  REPEATABLE READ
+***_  SERIALIZABLE
 ** MVCC
 ** 幻读
 
@@ -263,6 +316,9 @@ EXSIT和IN语句组成的布尔表达式
 ;
 @endmindmap
 ```
+
+---
+
 ## Redis
 
 ```plantuml
@@ -288,11 +344,15 @@ EXSIT和IN语句组成的布尔表达式
 ****_ 脑裂
 ****_ raft?
 
+***_ 如何扩容
+***_ 各个节点间怎么通信的
+
 ** 可用性
 ***_ 与数据库一致性
-***_ 缓存雪崩
+***_ 缓存雪崩 多 key 集体失效
 ***_ 缓存击穿 单热点 key 失效，
 ***_ 缓存穿透，猛攻 key 不存在，布隆过滤器
+***_ 怎么保证redis和mysql的一致性
 
 ** 分布式锁
 ***_ 实现方法
@@ -304,9 +364,32 @@ EXSIT和IN语句组成的布尔表达式
 ***_ epoll
 ***_ 单线程的优缺点
 ***_ 什么情况下会出现阻塞，怎么解决
+
+** 持久化
+*** AOF
+****_ 阻塞？
+****_ 什么时候使用
+*** RDB
+****_ 什么时候使用
+@endmindmap
+```
+---
+## ES
+
+```plantuml
+@startmindmap
+* ES
+** 原理
+***_ 写入，查询过程
+***_ 底层实现
+** 集群
+*** 脑裂问题
+***_ 怎么产生的
+***_ 如何解决
 @endmindmap
 ```
 
+---
 ## 分布式
 
 ```plantuml
@@ -322,5 +405,49 @@ EXSIT和IN语句组成的布尔表达式
 ** BASE
 
 ** 幂等
+@endmindmap
+```
+
+---
+## Linux
+```plantuml
+@startmindmap
+* Linux
+** Kernel
+***_ 用户态
+***_ 内核态
+***_ 有几种转换的方式，怎么转换的，转换失败怎么办
+
+** 虚拟内存
+***_ 虚拟地址和物理地址怎么转换
+***_ 内存分段,内存分页,优缺点 
+@endmindmap
+```
+
+---
+
+## 网络
+
+```plantuml
+@startmindmap
+* Network
+** tcp
+*** 三次握手
+****_ 流程
+****_ time_wait状态
+** http
+*** 请求头
+****_ **expire**: 包含日期/时间， 即在此时候之后，响应过期。
+****_ **cache-control**: 实现缓存机制
+*** 状态码
+****_ **301** 永久重定向到由 Location 头部指定的url上
+****_ **302** 暂时的移动到了由Location 头部指定的 URL 上
+****_ **401** 由于缺乏目标资源要求的身份验证凭证
+****_ **403** 服务器端有能力处理该请求，但是拒绝授权访问
+** https
+***_ 原理
+***_ 数字签名
+***_ 数字证书
+***_ 非对称加密算法
 @endmindmap
 ```
