--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -24,6 +24,11 @@ categories: 面试
 ****_ 内存屏障
 
 *** 锁
+**** 锁升级
+*****_ 偏向锁
+*****_ 轻量级锁
+*****_ 重量级锁
+
 ****_ 乐观
 ****_ 悲观
 ****_ CAS
@@ -49,6 +54,13 @@ categories: 面试
 *****_ hash冲突怎么办
 *****_ 扩容实现
 *****_ 内存泄漏产生原因，怎么解决
+**** 线程池
+*****_ 原理
+*****_ 核心参数
+*****_ 线程数设置
+*****_ 参数动态调整后变化过程 *
+*****_ 线程抛异常怎么办 *
+
 
 ** 线程
 *** 线程状态
@@ -71,6 +83,7 @@ categories: 面试
 
 ***_ interrupt()
 
+left side
 ** 集合
 
 *** hashmap
@@ -88,6 +101,14 @@ categories: 面试
 ** 动态代理
 ***_ spring aop的理解，解决什么问题,实现原理
 ***_ jdk动态代理,cglib区别，优缺点
+
+** 反射
+***_ 原理
+
+** NIO
+***_ 实现原理
+***_ 优缺点
+***_ netty的设计模型，架构，使用场景
 
 @endmindmap
 ```
@@ -111,18 +132,37 @@ categories: 面试
 *** 双亲委派
 ****_ 机制
 ****_ 三次破坏
+*** 类加载过程
+****_ 详细过程
+****_ 符号引用
+****_ 初始化过程
+
 
 ** GC
 *** CMS
 *** G1
 ***_ gc roots有哪些
 ***_ 什么情况下会发生full gc
+***_ 什么对象进入老年代
+***_ eden和survivor比例可以调整么，参数是什么，调整后会有什么问题
 
 ** OOM
 ***_ 排查
 ***_ 产生原因
 
 ** 内存区域
+*** 内存结构
+****_ 程序计数器
+****_ 虚拟机栈
+****_ 堆
+****_ 方法区
+
+*** 操作数栈
+****_ 操作数栈过程
+****_ 方法返回地址什么时候回收
+****_ 程序计数器什么时候为空
+
+
 *** 对象一定分配在堆上么
 ****_ TLAB
 ****_ 标量替换
@@ -242,6 +282,11 @@ left side
 ****_ 二级索引
 ****_ 覆盖索引
 ***_ 自动生成的主键有什么问题
+***_ 什么情况索引失效
+
+** 运维
+***_ 一张大表怎么更改表的数据结构，字段
+***_ 自增id用完了怎么办
 
 @endmindmap
 ```
@@ -330,8 +375,11 @@ EXSIT和IN语句组成的布尔表达式
 ****_ 负载因子
 *** Sorted Set
 ****_ skiplist
+****_ 用途
 *** String
 ****_ SDS vs. C
+*** hyperloglog
+****_ 优缺点
 
 
 ** 集群
@@ -370,7 +418,15 @@ EXSIT和IN语句组成的布尔表达式
 ****_ 阻塞？
 ****_ 什么时候使用
 *** RDB
+***_ 用处
 ****_ 什么时候使用
+
+** 管道
+***_ 用处
+***_ 原理
+***_ 原子性？
+***_ 和事务的区别？
+
 @endmindmap
 ```
 ---
@@ -386,6 +442,8 @@ EXSIT和IN语句组成的布尔表达式
 *** 脑裂问题
 ***_ 怎么产生的
 ***_ 如何解决
+
+** 深度分页及优化
 @endmindmap
 ```
 
@@ -421,6 +479,20 @@ EXSIT和IN语句组成的布尔表达式
 ** 虚拟内存
 ***_ 虚拟地址和物理地址怎么转换
 ***_ 内存分段,内存分页,优缺点 
+
+** 进程
+***_ fork函数，父子进程的区别
+***_ 孤儿进程，僵尸进程会有什么问题
+***_ 进程有哪些状态
+***_ 进程间怎么同步，通信
+***_ 消息队列，管道怎么实现的
+***_ 进程调度算法
+
+** 锁
+***_ 自旋锁
+***_ 线程上下文切换的开销具体
+
+** 中断
 @endmindmap
 ```
 
@@ -431,10 +503,15 @@ EXSIT和IN语句组成的布尔表达式
 ```plantuml
 @startmindmap
 * Network
-** tcp
-*** 三次握手
+** tcp/udp
+*** tcp 三次握手
 ****_ 流程
 ****_ time_wait状态
+****_ [[https://www.zhihu.com/question/361111920/answer/1199952447 65535?]] 最多建立多少个连接？ *
+***_ tcp、udp 区别
+***_ tcp、udp 报文结构
+
+
 ** http
 *** 请求头
 ****_ **expire**: 包含日期/时间， 即在此时候之后，响应过期。
@@ -451,3 +528,35 @@ EXSIT和IN语句组成的布尔表达式
 ***_ 非对称加密算法
 @endmindmap
 ```
+
+### TCP 最多可建立多少个连接？
+```
+fs.file-max： 当前系统可打开的最大数量
+fs.nr_open： 当前系统单个进程可打开的最大数量
+nofile： 每个用户的进程可打开的最大数量
+```
+
+linux 下一切皆文件，包括 socket。所以每当进程打开一个 socket 时候，内核实际上都会创建包括 file 在内的几个内核对象。该进程如果打开了两个 socket，那么它的内核对象结构如下图。
+
+![tcp-socket-file]({{ site.url }}/assets/imgs/resume/tcp-socket-file.jpg)
+
+
+---
+
+## Spring
+
+```plantuml
+@startmindmap
+* Spring
+** Framework
+*** 循环依赖
+****_ 怎么解决
+****_ 为何三级缓存？
+
+*** 生命周期
+*** bean创建过程
+*** 事务失效及原因
+*** 怎么加载类
+@endmindmap
+```
+
