--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -62,8 +62,21 @@ categories: 面试
 ![spring]({{ site.url }}/assets/imgs/resume/spring.svg)
 
 
-
 ---
+---
+### synchronized
+#### 原理
+
+`Synchronized` 的语义底层是通过一个 `monitor` 的对象来完成，其实 `wait/notify` 等方法也依赖于 `monitor` 对象，这就是为什么只有在同步的块或者方法中才能调用 `wait/notify` 等方法，否则会抛出 **java.lang.IllegalMonitorStateException** 的异常的原因。
+
+
+![sync-markword]({{ site.url }}/assets/imgs/resume/sync-markword.png)
+
+![sync-flow]({{ site.url }}/assets/imgs/resume/sync-flow.png)
+
+
+- monitorenter & monitorexit
+- ACC_SYNCHRONIZED 
 
 ### TCP 最多可建立多少个连接？
 ```
